--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 services:
-  web:
-    build: .
+  echoserver:
+    build:
+      context: .
     ports:
       - "6000:6000"
+  nginx:
+    build:
+      context: ./nginx
+    ports:
+      - "8080:80"
