--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Docker 101 - First Lesson For JavaScript Developers",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start:debug": "node --inspect=0.0.0.0:16000 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
