--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,9 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-FE-APPKEY com.sankuai.cloudfe.webstatic.reactdemo;
+    proxy_set_header X-Real-URI $request_uri;
+    rewrite ^/(.*)$ /webstaticproxy break;
 
     proxy_pass http://echoserver:6000;
   }
