feat: 实验 nginx proxy_pass 转发配置 使用 rewrite 指令将 /app1 的相对路径作为 url 参数传给上游

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,4 +7,17 @@ server {
 
     proxy_pass http://echoserver:6000;
   }
+
+  location /app1 {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-REAL-URI $request_uri;
+    proxy_set_header X-URI $uri;
+
+    rewrite ^/app1(.*)$ /gateway/?uri=$1 break;
+
+    proxy_pass http://echoserver:6000;
+  }
 }
