--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,4 +20,18 @@ server {
 
     proxy_pass http://echoserver:6000;
   }
+
+  location /v1beta {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-REAL-URI $request_uri;
+    proxy_set_header X-URI $uri;
+
+    # https://stackoverflow.com/questions/38463895/add-url-prefix-to-requests-using-nginx-or-rails
+    rewrite ^(.*)$ /openapi$1 break;
+    
+    proxy_pass http://echoserver:6000;
+  }
 }
