--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "express": "^4.17.1",
+    "koa": "^2.13.1",
+    "koa-morgan": "^1.0.1",
     "morgan": "^1.10.0"
   }
 }
