--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "koa": "^2.13.1",
     "koa-morgan": "^1.0.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.3",
+    "@types/koa-router": "^7.4.2"
   }
 }
