--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
+    "koa-mount": "^4.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/koa": "^2.13.3",
-    "@types/koa-router": "^7.4.2"
+    "@types/koa-router": "^7.4.2",
+    "chokidar": "^3.5.1"
   }
 }
