--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "dockerized-koa-demo",
   "version": "1.0.0",
   "description": "Dockerized Koa 101 - First Lesson For JavaScript Developers",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js",
-    "start:debug": "node --inspect=0.0.0.0:16000 index.js",
+    "start": "node main.js",
+    "start:debug": "node --inspect=0.0.0.0:16000 main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
