feat: update zipkin functionality
* remove /zipkin api (for collecting logs)
* use console recorder instead
* refactor: make tracer.js a standalone module
* feat: add new route: /httpbin to proxy http requests to httpbin.org service

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zipkin": "^0.22.0",
     "zipkin-context-cls": "^0.22.0",
     "zipkin-instrumentation-fetch": "^0.22.0",
+    "zipkin-instrumentation-koa": "^0.22.0",
     "zipkin-transport-http": "^0.22.0"
   },
   "devDependencies": {
