--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.0.0",
+    "axios": "^0.21.1",
+    "btoa": "^1.2.1",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "koa": "^2.13.1",
@@ -26,6 +28,7 @@
     "koa-mount": "^4.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "querystring": "^0.2.1",
     "zipkin": "^0.22.0",
     "zipkin-context-cls": "^0.22.0",
     "zipkin-instrumentation-fetch": "^0.22.0",
