--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-mount": "^4.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "querystring": "^0.2.1",
     "zipkin": "^0.22.0",
     "zipkin-context-cls": "^0.22.0",
     "zipkin-instrumentation-fetch": "^0.22.0",
