--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-mount": "^4.0.0",
+    "log4js": "^6.3.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
