--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.0.0",
-    "dotenv": "^10.0.0",
+    "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
