feat: 将 redis 服务加入到 docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,8 @@ services:
       context: ./nginx
     ports:
       - "8088:80"
+  redis:
+    build:
+      context: ./redis
+    ports:
+      - "6379:6379"
