feat: 修改 redis.conf 配置错误

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1059,7 +1059,7 @@ lazyfree-lazy-user-del no
 #           the server starts and are then clamped to a range of -1000 to 1000.
 #           Because typically the initial value is 0, they will often match the
 #           absolute values.
-oom-score-adj no
+# oom-score-adj no
 
 # When oom-score-adj is used, this directive controls the specific values used
 # for master, replica and background child processes. Values range -2000 to
@@ -1069,7 +1069,7 @@ oom-score-adj no
 # can freely increase their value, but not decrease it below its initial
 # settings. This means that setting oom-score-adj to "relative" and setting the
 # oom-score-adj-values to positive values will always succeed.
-oom-score-adj-values 0 200 800
+# oom-score-adj-values 0 200 800
 
 ############################## APPEND ONLY MODE ###############################
 
