feat: demonstrate how to implement job queue with bull
* 为方便开发调试，取消 redis.conf 中的 localhost 限制
* 在 consumer 启动时可以自动重试所有失败的任务
* 使用 .env 文件指定 REDIS_HOST 环境变量
* 修改 Dockerfile 使服务使用 docker 启动时不使用 .env.local
* 使用 npm scripts 运行 job-queue 示例代码脚本

chore: add .env file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,17 @@
       "address": "0.0.0.0",
       "port": 16000,
       "protocol": "inspector"
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Attach queue.inspect.js",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "address": "0.0.0.0",
+      "port": 16001,
+      "protocol": "inspector"
     }
   ]
 }
