--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,8 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+.env.local
+.env.*.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
