--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node main.js",
     "start:debug": "node --inspect=0.0.0.0:16000 main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint main.js app/"
+    "lint": "eslint main.js app/",
+    "job-queue:inspect": "node --inspect=0.0.0.0:16001 bin/inspect-queue.js",
+    "job-queue:consume": "node bin/start-queue-consumer.js",
+    "job-queue:produce": "node bin/start-queue-producer.js"
   },
   "repository": {
     "type": "git",
@@ -20,17 +23,22 @@
     "@koa/router": "^10.0.0",
     "axios": "^0.21.1",
     "btoa": "^1.2.1",
+    "bull": "^3.29.1",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-morgan": "^1.0.1",
     "koa-mount": "^4.0.0",
+    "lodash": "^4.17.21",
     "log4js": "^6.3.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
     "redis": "^3.1.2",
+    "sleep-promise": "^9.1.0",
+    "uuid": "^8.3.2",
     "zipkin": "^0.22.0",
     "zipkin-context-cls": "^0.22.0",
     "zipkin-instrumentation-fetch": "^0.22.0",
