--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,12 @@
 server {
+  server_name local.sankuai.com ~^(?<swimlane>.+)?-sl-local\.sankuai\.com$;
+
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-SWIMLANE $swimlane;
 
     proxy_pass http://echoserver:6000;
   }
