feat: 演示如何将 /logout 接口完全重写到 /echo

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,11 @@
 server {
   server_name local.sankuai.com ~^(?<swimlane>.+)?-sl-local\.sankuai\.com$;
 
+  location /logout {
+    rewrite ^/(.*)$ /echo break;
+    proxy_pass http://echoserver:6000;
+  }
+
   location / {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
