feat: test if-statement of nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,28 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-SWIMLANE $swimlane;
 
+    # 默认使用 desktop 类型
+    set $device_type "desktop";
+    if ($http_user_agent ~* "(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino") {
+      set $device_type "mobile";
+    }
+    proxy_set_header X-Device-Type $device_type;
+
+    proxy_set_header X-ACCEPT-Language $http_accept_language;
+    proxy_set_header X-FOO $http_foo;
+
+    # 默认使用简体中文
+    set $lang "zh-hans";
+    if ($http_accept_language ~* ^zh-(cn|sg|chs|hans).*) {
+      set $lang "zh-hans";
+    }
+    if ($http_accept_language ~* ^zh-(hk|tw|mo|cht|hant).*) {
+      set $lang "zh-hant";
+    }    
+    if ($http_accept_language = 'zh-TW') {
+      set $lang "zh-hant-1";
+    }
+    proxy_set_header X-Language $lang;
     proxy_pass http://echoserver:6000;
   }
 
